syntax = "proto3";
package common;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/nikitawootten/dns-firewall-controller/src/common";

message IpAddress {
    oneof ip_address {
        fixed32 ipv4 = 1;
        bytes ipv6 = 2;
    }
}

message ClientPolicy {
    google.protobuf.Timestamp allow_until = 1;
    IpAddress client = 2;
    repeated IpAddress allowed_ips = 3;
}

message ClientPolicyList {
    repeated ClientPolicy policies = 1;
}

service FirewallController {
    rpc WriteClientPolicy(ClientPolicy) returns (google.protobuf.Empty) {}
    rpc RecordActivePolicies(google.protobuf.Empty) returns (ClientPolicyList) {}
    rpc RecordActiveClientPolicies(IpAddress) returns (ClientPolicyList) {}

    // Stream endpoints
    rpc WriteStreamClientPolicies(stream ClientPolicy) returns (google.protobuf.Empty) {}
    rpc RecordStreamPolicies(google.protobuf.Empty) returns (stream ClientPolicy) {}
    rpc RecordStreamClientPolicies(IpAddress) returns (stream ClientPolicy) {}
}
